--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,46 @@
-language: python
-python:
-  - "2.6"
-  - "2.7"
+sudo: false
+language: csharp
+mono:
+  - beta
+os:
+  - linux
+  #- osx
 before_install:
   - git submodule update --init --recursive
 install:
+  - export YCMD_VENV_DIR=${HOME}/venvs/ycmd_test
+  - virtualenv -p python${PYTHON_VERSION} $YCMD_VENV_DIR
+  - cp /usr/bin/python${PYTHON_VERSION}-config ${YCMD_VENV_DIR}/bin/python-config
+  - source ${YCMD_VENV_DIR}/bin/activate
+  - pip install -U pip wheel setuptools
   - pip install -r test_requirements.txt
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo add-apt-repository -y ppa:ermshiperete/monodevelop
-  - sudo apt-get -qq update
-  - sudo apt-get -qq install monodevelop-current
-  - sudo apt-get -qq install g++-4.8
   - npm install -g typescript
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-  - MONO_PREFIX=/opt/monodevelop
-  - export DYLD_LIBRARY_FALLBACK_PATH=$MONO_PREFIX/lib:$DYLD_LIBRARY_FALLBACK_PATH
-  - export LD_LIBRARY_PATH=$MONO_PREFIX/lib:$LD_LIBRARY_PATH
-  - export C_INCLUDE_PATH=$MONO_PREFIX/include:$C_INCLUDE_PATH
-  - export PKG_CONFIG_PATH=$MONO_PREFIX/lib/pkgconfig:$PKG_CONFIG_PATH
-  - export PATH=$MONO_PREFIX/bin:$PATH
   # Travis can run out of RAM when compiling if don't prevent parallelization.
-  - export YCM_CORES=1
+  #- export YCM_CORES=1
 compiler:
   - gcc
   - clang
+before_script:
+  - if [ $TRAVIS_OS_NAME == "osx" ] ; then sudo sysctl -w kern.maxfiles=64000 ; sudo sysctl -w kern.maxfilesperproc=64000 ; sudo launchctl limit maxfiles 64000 64000 ; fi ; ulimit -n 64000
 script: ./run_tests.py
 env:
-  - USE_CLANG_COMPLETER="true"
-  - USE_CLANG_COMPLETER="false"
+  - PYTHON_VERSION="2.6" USE_CLANG_COMPLETER="true" MONO_THREADS_PER_CPU=2000 MONO_MANAGED_WATCHER=disabled
+  - PYTHON_VERSION="2.6" USE_CLANG_COMPLETER="false" MONO_THREADS_PER_CPU=2000 MONO_MANAGED_WATCHER=disabled
+  - PYTHON_VERSION="2.7" USE_CLANG_COMPLETER="true" MONO_THREADS_PER_CPU=2000 MONO_MANAGED_WATCHER=disabled
+  - PYTHON_VERSION="2.7" USE_CLANG_COMPLETER="false" MONO_THREADS_PER_CPU=2000 MONO_MANAGED_WATCHER=disabled
+addons:
+  apt:
+    sources:
+     - ubuntu-toolchain-r-test
+     - deadsnakes
+    packages:
+     - g++-4.8
+     - python2.6
+     - python2.6-dev
+     - python2.7
+     - python2.7-dev
+     - python-virtualenv
+cache:
+  directories:
+    - $HOME/.cache/pip
+    - $HOME/.dnx/packages
