--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-language: c++
+language: csharp
 os:
   - linux
   - osx
-osx_image: xcode6.4
-sudo: required
+sudo: false
+mono:
+  - beta
 before_install:
   - git submodule update --init --recursive
 install:
@@ -13,7 +14,27 @@ compiler:
   - gcc
 script: ./run_tests.py
 env:
-  - USE_CLANG_COMPLETER="true" YCMD_PYTHON_VERSION="2.6"
-  - USE_CLANG_COMPLETER="false" YCMD_PYTHON_VERSION="2.7"
-  - USE_CLANG_COMPLETER="true" YCMD_PYTHON_VERSION="2.7"
-  - USE_CLANG_COMPLETER="false" YCMD_PYTHON_VERSION="2.6"
+  global:
+    - MONO_THREADS_PER_CPU=2000
+    - MONO_MANAGED_WATCHER=disabled
+  matrix:
+    - USE_CLANG_COMPLETER="true" YCMD_PYTHON_VERSION="2.7"
+    - USE_CLANG_COMPLETER="false" YCMD_PYTHON_VERSION="2.7"
+    - USE_CLANG_COMPLETER="true" YCMD_PYTHON_VERSION="2.6"
+    - USE_CLANG_COMPLETER="false" YCMD_PYTHON_VERSION="2.6"
+addons:
+  apt:
+    sources:
+     - ubuntu-toolchain-r-test
+     - deadsnakes
+    packages:
+     - g++-4.8
+     - python2.6
+     - python2.6-dev
+     - python2.7
+     - python2.7-dev
+     - python-virtualenv
+cache:
+  directories:
+    - $HOME/.cache/pip
+    - $HOME/.dnx/packages
