Use environment matrix as all pythons now work

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,14 @@ compiler:
   - gcc
 script: ./run_tests.py
 env:
-  - USE_CLANG_COMPLETER="true" YCMD_PYTHON_VERSION="2.6" MONO_THREADS_PER_CPU=2000 MONO_MANAGED_WATCHER=disabled
-  - USE_CLANG_COMPLETER="false" YCMD_PYTHON_VERSION="2.7" MONO_THREADS_PER_CPU=2000 MONO_MANAGED_WATCHER=disabled
-  - USE_CLANG_COMPLETER="true" YCMD_PYTHON_VERSION="2.7" MONO_THREADS_PER_CPU=2000 MONO_MANAGED_WATCHER=disabled
-  - USE_CLANG_COMPLETER="false" YCMD_PYTHON_VERSION="2.6" MONO_THREADS_PER_CPU=2000 MONO_MANAGED_WATCHER=disabled
+  global:
+    - MONO_THREADS_PER_CPU=2000
+    - MONO_MANAGED_WATCHER=disabled
+  matrix:
+    - USE_CLANG_COMPLETER="true"
+    - USE_CLANG_COMPLETER="false"
+    - YCMD_PYTHON_VERSION="2.7"
+    - YCMD_PYTHON_VERSION="2.6"
 addons:
   apt:
     sources:
