--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "third_party/tern"]
 	path = third_party/tern
 	url = https://github.com/ternjs/tern.git
+[submodule "third_party/racerd"]
+	path = third_party/racerd
+	url = https://github.com/jwilm/racerd
