--- a/ycmd/default_settings.json
+++ b/ycmd/default_settings.json
@@ -38,5 +38,6 @@
   "csharp_server_port": 0,
   "hmac_secret": "",
   "server_keep_logfiles": 0,
-  "gocode_binary_path": ""
+  "gocode_binary_path": "",
+  "rust_src_path": ""
 }
