--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,11 @@ install:
   - python C:\get-pip.py
   - pip install -r test_requirements.txt
   - npm install -g typescript
+  - ps: Start-FileDownload 'https://static.rust-lang.org/dist/rust-1.5.0-i686-pc-windows-gnu.exe'
+  - rust-1.5.0-i686-pc-windows-gnu.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
+  - SET PATH=%PATH%;C:\Program Files (x86)\Rust\bin
+  - rustc -V
+  - cargo -V
 build_script:
   - python run_tests.py --msvc %MSVC%
 # Disable automatic tests
