Add Appveyor cache for racerd build files
The ~\.cargo folder holds the source version of dependencies needed for
all rust projects. This should cache without any issue. The `target`
folder inside racerd could potentially be an issue since it resides
within a submodule.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,3 +37,7 @@ build_script:
   - python run_tests.py --msvc %MSVC%
 # Disable automatic tests
 test: off
+
+cache:
+  - 'C:\Users\appveyor\.cargo -> third_party\racerd'
+  - 'third_party\racerd\target -> third_party\racerd'
