--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,17 +32,15 @@ install:
   - npm install -g typescript
   - ps: Start-FileDownload 'https://static.rust-lang.org/dist/rust-1.5.0-i686-pc-windows-gnu.exe'
   - rust-1.5.0-i686-pc-windows-gnu.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
-  - SET PATH=%PATH%;C:\Program Files (x86)\Rust\bin
-  - SET PATH=%PATH%;C:\MinGW\bin
+  - SET PATH=C:\Program Files (x86)\Rust\bin;C:\MinGW\bin;%PATH%
   - rustc -V
   - cargo -V
   - ps: Start-FileDownload "http://slproweb.com/download/Win32OpenSSL-1_0_2e.exe"
-  - Win32OpenSSL-1_0_2e.exe /SILENT /VERYSILENT /SP- /DIR="C:\OpenSSL"
+  - Win32OpenSSL-1_0_2e.exe /VERYSILENT /SP- /DIR="C:\OpenSSL"
 build_script:
   - python run_tests.py --msvc %MSVC%
 # Disable automatic tests
 test: off
-
 cache:
   - 'C:\Users\appveyor\.cargo -> third_party\racerd'
   - 'third_party\racerd\target -> third_party\racerd'
