--- a/ycmd/default_settings.json
+++ b/ycmd/default_settings.json
@@ -39,5 +39,6 @@
   "hmac_secret": "",
   "server_keep_logfiles": 0,
   "gocode_binary_path": "",
-  "rust_src_path": ""
+  "rust_src_path": "",
+  "racerd_binary_path": ""
 }
