--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "third_party/tern"]
 	path = third_party/tern
 	url = https://github.com/ternjs/tern.git
+[submodule "third_party/JediHTTP"]
+	path = third_party/JediHTTP
+	url = https://github.com/vheon/JediHTTP
