--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,8 +22,8 @@ install:
   - python C:\get-pip.py
   - pip install -r test_requirements.txt
   - npm install -g typescript
-  - ps: Start-FileDownload 'https://static.rust-lang.org/dist/rust-1.5.0-i686-pc-windows-gnu.exe'
-  - rust-1.5.0-i686-pc-windows-gnu.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
+  - ps: Start-FileDownload 'https://static.rust-lang.org/dist/rust-1.5.0-x86_64-pc-windows-msvc.exe'
+  - rust-1.5.0-x86_64-pc-windows-msvc.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
   - SET PATH=C:\Program Files (x86)\Rust\bin;C:\MinGW\bin;%PATH%
   - rustc -Vv
   - cargo -Vv
