--- a/cpp/ycm/CMakeLists.txt
+++ b/cpp/ycm/CMakeLists.txt
@@ -30,22 +30,22 @@ if ( USE_CLANG_COMPLETER AND
      NOT PATH_TO_LLVM_ROOT AND
      NOT EXTERNAL_LIBCLANG_PATH )
 
-  set( CLANG_VERSION "3.7.0" )
+  set( CLANG_VERSION "3.8.0" )
 
   if ( APPLE )
-    set( CLANG_DIRNAME "clang+llvm-${CLANG_VERSION}-x86_64-apple-darwin" )
+    set( CLANG_DIRNAME "clang+llvm-${CLANG_VERSION}-rc3-x86_64-apple-darwin14.4.0" )
     set( CLANG_SHA256
-         "057e56b445ac5dfbf0d5475badab374edebe8db5428001c8829340e40724b50d" )
+         "99cc940e8b302a99eb98dd11d790e215dd928a556fed0ca682804f06bf7a5adb" )
     set( CLANG_FILENAME "${CLANG_DIRNAME}.tar.xz" )
   elseif ( WIN32 )
     if( 64_BIT_PLATFORM )
-      set( CLANG_DIRNAME "LLVM-${CLANG_VERSION}-win64" )
+      set( CLANG_DIRNAME "LLVM-${CLANG_VERSION}-rc3-win64" )
       set( CLANG_SHA256
-           "04a393cf73bc7416c9903aa08f47f15c77cf475b22a607ac4b7493a658a11a3f" )
+           "d03404a85c0d44f9d10023e7534f9d36985a84be81fb5dfbd280888a07954cc5" )
     else()
-      set( CLANG_DIRNAME "LLVM-${CLANG_VERSION}-win32" )
+      set( CLANG_DIRNAME "LLVM-${CLANG_VERSION}-rc3-win32" )
       set( CLANG_SHA256
-           "75933480c8f8e3ae3cf9281494bf0057e9e4cfae4315f59c468a4e850a86f544" )
+           "9eeb38e05785706dc40d0db2ba6c1fa11d949278b1831f17dacc9eccc34f0728" )
     endif()
     set( CLANG_FILENAME "${CLANG_DIRNAME}.exe" )
   else()
@@ -53,9 +53,9 @@ if ( USE_CLANG_COMPLETER AND
       # We MUST support the latest Ubuntu LTS release!
       # At the time of writing, that's 14.04. Switch to next LTS ~6 months after
       # it comes out.
-      set( CLANG_DIRNAME "clang+llvm-${CLANG_VERSION}-x86_64-linux-gnu-ubuntu-14.04" )
+      set( CLANG_DIRNAME "clang+llvm-${CLANG_VERSION}-rc3-x86_64-linux-gnu-ubuntu-14.04" )
       set( CLANG_SHA256
-           "093a94ff8982ae78461f0d2604c98f6b454c15e2ef768d34c235c6676c336460" )
+           "51d1cf3c01e64b331ca6f1f4f2b5b244f91e21a1ef4c0d2da044ffbfbfef24ff" )
       set( CLANG_FILENAME "${CLANG_DIRNAME}.tar.xz" )
     else()
       # Clang 3.3 is the last version with pre-built x86 binaries upstream.
@@ -85,7 +85,7 @@ if ( USE_CLANG_COMPLETER AND
   if( CLANG_DOWNLOAD )
     message( "Downloading Clang ${CLANG_VERSION}" )
 
-    set( CLANG_URL "http://llvm.org/releases/${CLANG_VERSION}" )
+    set( CLANG_URL "http://llvm.org/pre-releases/${CLANG_VERSION}/rc3" )
     file(
       DOWNLOAD "${CLANG_URL}/${CLANG_FILENAME}" "${CLANG_LOCAL_FILE}"
       SHOW_PROGRESS EXPECTED_HASH SHA256=${CLANG_SHA256}
