--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ branches:
   except:
     - auto
 environment:
-  USE_CLANG_COMPLETER: true
+  USE_CLANG_COMPLETER: false
   matrix:
   # We only test MSVC 11 and 12 with Python 3.5 on 64 bits.
   - msvc: 11
