--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ compiler:
 script:
   - ci/travis/travis_script.sh
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - codecov --gcov-glob */tests/* */BoostParts/*
 env:
   global:
     - MONO_THREADS_PER_CPU=2000
