--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ third_party/tern_runtime/node_modules
 
 # Exclude vagrant directory
 .vagrant/
+
+# Exclude the coverage build output directory
+.build/
