--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ third_party/tern_runtime/node_modules
 
 # Exclude the coverage build output directory
 .build/
+
+# Exclude gcov output
+*.gcov
+# And python coverage output, when running manually
+coverage.xml
