--- a/codecov.yml
+++ b/codecov.yml
@@ -13,6 +13,12 @@ coverage:
     patch: true
     changes: true
 
+  # We don't want statistics for the tests themselves and certainly not for the
+  # boost libraries
+  ignore:
+  - */cpp/*/tests/*
+  - */cpp/*/BoostParts/*
+
 comment:
   layout: "header, diff, changes, uncovered"
   behavior: default  # update if exists else create new
