Basic framework for Java Language Server connection
Build the jdt.ls server in build.py
Start the server
Connect to the server using stdio
Send the initialise request
Basic support for completions (prototype)
Update the file contents in the server
Use a workspace dir for each invocation.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ third_party/tern_runtime/package-lock.json
 *.gcov
 # And python coverage output, when running manually
 coverage.xml
+
+# The JDT java completer requires a workspace (for no explicable reason other
+# than "eclipse")
+third_party/eclipse.jdt.ls-workspace
