--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -112,8 +112,8 @@ endif()
 
 #############################################################################
 
-set( CXX_STANDARD 11 )
-set( CXX_STANDARD_REQUIRED ON )
+set( CMAKE_CXX_STANDARD 11 )
+set( CMAKE_CXX_STANDARD_REQUIRED ON )
 
 #############################################################################
 
