--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -112,9 +112,22 @@ endif()
 
 #############################################################################
 
-set( CMAKE_CXX_STANDARD 11 )
-set( CMAKE_CXX_STANDARD_REQUIRED ON )
-
+# Determining the presence of C++11 support in the compiler
+set( CPP11_AVAILABLE false )
+if ( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
+  if ( NOT ( CMAKE_CXX_COMPILER_VERSION VERSION_LESS  4.6 )
+    set( CPP11_AVAILABLE true )
+  endif()
+elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" )
+	if ( NOT ( CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.3 ) )
+    set( CPP11_AVAILABLE true )
+    set( CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11" )
+    set( CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++" )
+elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" )
+  if ( NOT ( MSVC_VERSION LESS 1800 ) )
+    set( CPP11_AVAILABLE true )
+  endif()
+endif()
 #############################################################################
 
 # For MSVC enable UNICODE and compilation on multiple processors
@@ -153,6 +166,26 @@ if( WIN32 OR CYGWIN )
 endif()
 
 #############################################################################
+
+# When used with Clang, adding the -std=c++0x flag to CMAKE_CXX_FLAGS will cause
+# the compiler to output a warning during linking:
+#  clang: warning: argument unused during compilation: '-std=c++0x'
+# This is caused by cmake passing this flag to the linking stage which it
+# shouldn't do. It's ignored so it does no harm, but the warning is annoying.
+#
+# Putting the flag in add_definitions() works around the issue, even though it
+# shouldn't in theory go there.
+if ( CPP11_AVAILABLE )
+  # Cygwin needs its hand held a bit; see issue #473
+  if ( CYGWIN AND CMAKE_COMPILER_IS_GNUCXX )
+    add_definitions( -std=gnu++11 )
+  else( NOT MSVC )
+    add_definitions( -std=c++11 )
+  endif()
+else()
+  message( FATAL_ERROR
+    "Your C++ compiler does NOT support C++11." )
+endif()
 
 # Note: build.py always explicitly sets this option, so the default used here
 # rarely matters.
