--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -115,7 +115,7 @@ endif()
 # Determining the presence of C++11 support in the compiler
 set( CPP11_AVAILABLE false )
 if ( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
-  if ( NOT ( CMAKE_CXX_COMPILER_VERSION VERSION_LESS  4.6 )
+  if ( NOT ( CMAKE_CXX_COMPILER_VERSION VERSION_LESS  4.6 ) )
     set( CPP11_AVAILABLE true )
   endif()
 elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" )
@@ -179,7 +179,7 @@ if ( CPP11_AVAILABLE )
   # Cygwin needs its hand held a bit; see issue #473
   if ( CYGWIN AND CMAKE_COMPILER_IS_GNUCXX )
     add_definitions( -std=gnu++11 )
-  else( NOT MSVC )
+  else()
     add_definitions( -std=c++11 )
   endif()
 else()
