--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -119,10 +119,11 @@ if ( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
     set( CPP11_AVAILABLE true )
   endif()
 elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" )
-	if ( NOT ( CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.3 ) )
+  if ( NOT ( CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.3 ) )
     set( CPP11_AVAILABLE true )
     set( CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11" )
     set( CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++" )
+  endif()
 elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" )
   if ( NOT ( MSVC_VERSION LESS 1800 ) )
     set( CPP11_AVAILABLE true )
